<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="300dp"
        android:minHeight="350dp"
        android:orientation="vertical"
        android:padding="8dp">

        <EditText
            android:id="@+id/et_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="none"
            android:hint="@string/make_job_dialog_company_name"
            android:inputType="textCapSentences|textAutoCorrect" />

        <EditText
            android:id="@+id/et_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="none"
            android:hint="@string/make_job_dialog_position"
            android:inputType="textCapSentences|textAutoCorrect" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="none"
            android:hint="@string/make_job_dialog_start_period"
            android:inputType="none"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="none"
            android:hint="@string/make_job_dialog_end_period"
            android:inputType="none"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="none"
            android:hint="@string/make_job_dialog_company_link"
            android:inputType="none" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="8dp"
            android:text="@string/make_job_dialog_bt_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_prove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="8dp"
            android:text="@string/make_job_dialog_bt_confirm"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>