<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_posts_fragment">

    <fragment
        android:id="@+id/nav_posts_fragment"
        android:name="com.klim.nework.fragments.PostFragment"
        android:label="@string/post_fragment_title"
        tools:layout="@layout/fragments_posts">
        <action
            android:id="@+id/action_nav_posts_fragment_to_makeEditPostFragment"
            app:destination="@id/makeEditPostFragment"
            app:popUpTo="@id/nav_posts_fragment" />
        <action
            android:id="@+id/action_nav_posts_fragment_to_nav_page_fragment"
            app:destination="@id/nav_page_fragment" />
        <action
            android:id="@+id/action_nav_posts_fragment_to_userPostFragment"
            app:destination="@id/userPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_events_fragment"
        android:name="com.klim.nework.fragments.EventsFragment"
        android:label="@string/events_fragment_title"
        tools:layout="@layout/fragments_events">
        <action
            android:id="@+id/action_nav_events_fragment_to_makeEventFragment"
            app:destination="@id/makeEventFragment"
            app:popUpTo="@id/nav_events_fragment" />
        <action
            android:id="@+id/action_nav_events_fragment_to_nav_page_fragment"
            app:destination="@id/nav_page_fragment" />
        <action
            android:id="@+id/action_nav_events_fragment_to_eventExhibitorFragment"
            app:destination="@id/eventExhibitorFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_page_fragment"
        android:name="com.klim.nework.fragments.PagerFragment"
        android:label="@string/page_fragment_title"
        tools:layout="@layout/fragment_page">
        <action
            android:id="@+id/action_nav_page_fragment_to_nav_posts_fragment"
            app:destination="@id/nav_posts_fragment"
            app:popUpTo="@id/nav_posts_fragment" />
        <argument
            android:name="authorId"
            android:defaultValue="-1L"
            app:argType="long" />
        <action
            android:id="@+id/action_nav_page_fragment_to_makeEditPostFragment"
            app:destination="@id/makeEditPostFragment"
            app:popUpTo="@id/nav_page_fragment" />
        <action
            android:id="@+id/action_nav_page_fragment_to_userPostFragment"
            app:destination="@id/userPostFragment" />
        <action
            android:id="@+id/action_nav_page_fragment_to_makeJobDialogFragment"
            app:destination="@id/makeJobDialogFragment" />
        <action
            android:id="@+id/action_nav_page_fragment_to_myJobFragment"
            app:destination="@id/myJobFragment" />
    </fragment>
    <fragment
        android:id="@+id/makeEditPostFragment"
        android:name="com.klim.nework.fragments.MakePostFragment"
        android:label="@string/make_post_fragment_title"
        tools:layout="@layout/fragment_make_post" />
    <fragment
        android:id="@+id/logInFragment"
        android:name="com.klim.nework.fragments.LoginFragments"
        android:label="@string/sign_in_fragment_title"
        tools:layout="@layout/fragment_log_in">
        <action
            android:id="@+id/action_logInFragment_to_registrFragment"
            app:destination="@id/registrFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/registrFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_logInFragment_to_nav_posts_fragment"
            app:destination="@id/nav_posts_fragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/nav_posts_fragment" />
    </fragment>
    <fragment
        android:id="@+id/registrFragment"
        android:name="com.klim.nework.fragments.RegisterFragment"
        android:label="@string/sign_up_fragment_title"
        tools:layout="@layout/fragment_registr">
        <action
            android:id="@+id/action_registrFragment_to_logInFragment"
            app:destination="@id/logInFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/logInFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/makeEventFragment"
        android:name="com.klim.nework.fragments.MakeEventFragment"
        android:label="@string/make_event_fragment_title"
        tools:layout="@layout/fragment_make_event" />
    <fragment
        android:id="@+id/nav_users_fragment"
        android:name="com.klim.nework.fragments.UsersFragment"
        android:label="@string/users_fragment_title"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_usersFragment_to_nav_page_fragment"
            app:destination="@id/nav_page_fragment" />
    </fragment>
    <fragment
        android:id="@+id/eventExhibitorFragment"
        android:name="com.klim.nework.fragments.EventExhibitorFragment"
        android:label="@string/event_exhibitor_fragment_tite"
        tools:layout="@layout/fragment_events_exhibitor"
        >
        <action
            android:id="@+id/action_eventExhibitorFragment_to_nav_page_fragment"
            app:destination="@id/nav_page_fragment" />
        <argument
            android:name="eventId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/fragmentLogotip"
        android:name="com.klim.nework.fragments.FragmentLogotip"
        android:label="FragmentLogotip"
        tools:layout="@layout/fragment_logotip"
        >
        <action
            android:id="@+id/action_fragmentLogotip_to_logInFragment"
            app:destination="@id/logInFragment" />
        <action
            android:id="@+id/action_fragmentLogotip_to_nav_posts_fragment"
            app:destination="@id/nav_posts_fragment" />
    </fragment>

    <fragment
        android:id="@+id/userPostFragment"
        android:name="com.klim.nework.fragments.UserPostFragment"
        android:label="UserPostFragment"
        tools:layout="@layout/fragment_user_post"
        >
    <argument
        android:name="authorId"
        android:defaultValue="-1L"
        app:argType="long" />
        <action
            android:id="@+id/action_userPostFragment_to_nav_page_fragment"
            app:destination="@id/nav_page_fragment" />

    </fragment>
    <dialog
        android:id="@+id/makeJobDialogFragment"
        android:name="com.klim.nework.fragments.MakeJobDialogFragment"
        android:label="MakeJobDialogFragment"
        tools:layout="@layout/dialog_fragment_make_job"
        >
        <action
            android:id="@+id/action_makeJobDialogFragment_to_nav_page_fragment"
            app:destination="@id/nav_page_fragment" />
    </dialog>

    <fragment
        android:id="@+id/myJobFragment"
        android:name="com.klim.nework.fragments.MyJobFragment"
        android:label="fragment_my_jobs"
        tools:layout="@layout/fragment_my_jobs" >
        <argument
            android:name="authorId"
            android:defaultValue="-1L"
            app:argType="long" />

        <action
            android:id="@+id/action_myJobFragment_to_nav_page_fragment"
            app:destination="@id/nav_page_fragment" />
        <action
            android:id="@+id/action_myJobFragment_to_editJobDialogFragment"
            app:destination="@id/editJobDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/editJobDialogFragment"
        android:name="com.klim.nework.fragments.EditJobDialogFragment"
        android:label="EditJobDialogFragment" >
        <action
            android:id="@+id/action_editJobDialogFragment_to_myJobFragment"
            app:destination="@id/myJobFragment" />
    </fragment>

</navigation>


